fixed project date on mobile

--- a/src/less/automobile.less
+++ b/src/less/automobile.less
@@ -100,6 +100,10 @@
 			text-align: left;
 		}
 
+        p.subtitle{
+            text-align: center;
+        }
+
 		.img{
 			margin: 0 !important;
 		}
